--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:dzcaine1@icloud.com
+  email: dzcaine1@icloud.com
   facebook:
   flickr:
   github: barryclark/jekyll-now
   instagram:
-  linkedin:
+  linkedin: in/denzel-caine-921b3a36b
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
