--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Denzel Caine
 description: A blog about me and the work that I have done in the past 4 years.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars.githubusercontent.com/u/179405193?s=400&u=6b1777c8575f4ee8c4afb4ae2ac8ef52a0cec72a&v=4
-
+avatar: 
 #
 # Flags below are optional
 #
