--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   flickr:
   github: barryclark/jekyll-now
   instagram:
-  linkedin: in/denzel-caine-921b3a36b
+  linkedin: https://www.linkedin.com/in/denzel-caine-921b3a36b/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
