--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ footer-links:
   email: dzcaine1@icloud.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/dcaine125
   instagram:
   linkedin: https://www.linkedin.com/in/denzel-caine-921b3a36b/
   pinterest:
